register-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: register-service
  template:
    metadata:
      labels:
        app: register-service
    spec:
      containers:
        - name: register-service
          image: register-service:latest
          ports:
            - containerPort: 8000
