register-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: register-service
spec:
  selector:
    app: register-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
