register-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: register-service-routes
spec:
  parentRefs:
    - name: my-gateway
      namespace: istio-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /users
          method: POST
      backendRefs:
        - name: register-service
          port: 8000
